--- a/templates/blocks/impression_block_new.html
+++ b/templates/blocks/impression_block_new.html
@@ -1,4 +1,4 @@
-<link href="<{$xoops_url}>/modules/impression/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <div  class="outer">
 <table border="0" cellspacing="1" cellpadding="0"">
   <tr height="14px" class="even" style="font-size: 12px; font-weight: bold;">
