--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -4,10 +4,10 @@
 <table width="100%" border="0" cellpadding="0" cellspacing="2" >
   <tr>
     <td>
-    <div style="text-align:right;"><small><{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$article.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}>&nbsp;</small>&nbsp;</div></td>
+    <div style="text-align:right;"><small><{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$article.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small>&nbsp;</div></td>
   </tr>
   <tr>
-    <td><div style="text-align: left;" valign="top"><{$article.introtext}></div></td>
+    <td><div style="text-align: left; vertical-align: top;"><{$article.introtext}></div></td>
   </tr>
 </table>
 <div class="impression_articleFooter">
@@ -17,4 +17,4 @@
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
 
-<{if $article.rssicons}><{$article.showrss}><{/if}>
+<{if $article.rssicons}><div align="center" style="padding: 2px;"><{$article.showrss}></div><{/if}>
