--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -17,4 +17,4 @@
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
 
-<{if $article.rssicons}><div align="center" style="padding: 2px;"><{$article.showrss}></div><{/if}>
+<div align="center" style="padding: 2px;"><{$article.showrss}></div>
