--- a/templates/impression_index.html
+++ b/templates/impression_index.html
@@ -38,7 +38,7 @@
 <{/if}>
 <div style="padding: 8px;">
   <div style="float: left; font-size: smaller;"><{$lang_thereare}></div>
-  <div style="float: right;"><{$rss_icon}></div>
+  <div style="float: right;"><{$impression_feed}></div>
 </div>
 
 <{if $catarray.indexfooter != ""}>
@@ -46,7 +46,7 @@
     <{$catarray.indexfooter}>
   </div>
 <{/if}>
-
+<div align="center"></div>
 <{if $showlatest}>
 	<br /><br />
 	<div class="odd" style="font-size: bigger; font-weight: bold;"><{$smarty.const._MD_IMPRESSION_LATESTLIST}></div>
