--- a/templates/impression_singlearticle.html
+++ b/templates/impression_singlearticle.html
@@ -20,11 +20,11 @@
 <div><{$article.description}></div>
 
 
-<!-- <{if $tagbar}>
+<{if $tagbar}>
   <div style="font-size: smaller;">
     <{include file="db:tag_bar.html"}>
   </div>
-<{/if}>    -->
+<{/if}> 
 
 <{if $article.showsbookmarx > 0}>
   <div class="impression_socbookmark">
