--- a/templates/impression_print.html
+++ b/templates/impression_print.html
@@ -24,7 +24,7 @@
     <div style="text-align: center;"><img src="<{$printlogourl}>" border="0" alt="" /></div>
 
 
-    <div style="margin-top: 10px; background-color: #E8E6E2; padding: 4px;">
+    <div style="margin-top: 10px; background-color: #E8E6E2; padding: 4px; font-size: smaller;">
     <div style="float: left;"><{$lang_category}> : <{$item.categoryname}></div>
     <div style="float: right;"><{$printheader}></div><br />
     </div>
@@ -35,7 +35,7 @@
          <div style="padding-top: 2px; "><{$lang_author_date}> </div>
     <{/if}>
   </div>
-  <div style="padding-top: 8px; text-align: left; font-weight: bold;"><{$item.introtext}></div>
+  <div style="padding-top: 8px; text-align: left; font-weight: bold;"><{$item.introtext}></div><br />
   <div style="text-align: left"><{$item.description}></div>
   <{if $itemfooter}>
        <div style="text-align: center; font-weight: bold; background-color: #E8E6E2; padding: 4px; margin-top: 10px;"><{$itemfooter}></div>
