--- a/modules/impression/templates/impression_topten.html
+++ b/modules/impression/templates/impression_topten.html
@@ -1,18 +1,18 @@
 <link href="<{$xoops_url}>/modules/<{$module_dir}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{$imageheader}>
 
-<br />
-<div style="float: right;"><{$back}>&nbsp;</div>
 
-<br />
+<div style="padding-top: 10px; float: right;"><{$back}>&nbsp;</div>
+
 
 <!-- Start ranking loop --> 
 <{foreach item=ranking from=$rankings}>
-<div style="margin-bottom: 5px;"><b><{$smarty.const._MD_IMPRESSION_CATEGORY}>: <{$ranking.title}></b></div>
+<div style="clear: both; margin-bottom: 5px;"><b><{$smarty.const._MD_IMPRESSION_CATEGORY}>: <{$ranking.title}></b></div>
 <table cellpadding="0" cellspacing="1" width="100%" class="outer"> 
   <tr> 
     <th align="center"><{$smarty.const._MD_IMPRESSION_RANK}></th>
     <th align="left">&nbsp;<{$smarty.const._MD_IMPRESSION_TITLE}></th>
+	<th align="left">&nbsp;<{$smarty.const._MD_IMPRESSION_CATEGORY}></th>
     <th align="center"><{$smarty.const._MD_IMPRESSION_HITS}></th>
   </tr>
   <!-- Start files loop --> 
@@ -20,6 +20,7 @@
   <tr> 
     <td align="center" class="head"><b><{$file.rank}></b></td> 
     <td class="even"><a href="singlearticle.php?cid=<{$file.cid}>&amp;aid=<{$file.id}>"><{$file.title}></a></td>
+	<td class="even"><a href="catview.php?cid=<{$file.cid}>"><{$file.category}></a></td>
     <td class="even" align="center"><{$file.hits}></td> 
   </tr>
 <{/foreach}> 
