--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -17,4 +17,4 @@
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
 
-<div align="center" style="padding: 2px;"><{$article.showrss}></div>
+<div align="center" style="padding: 2px;"><{$article.impression_feed}></div>
