--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -90,6 +90,20 @@ tr.impression_even td {
   padding-left: 4px;
   padding-right: 4px;
   vertical-align: middle; }
+  
+.impression_button {
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  padding-bottom: 3px;
+  padding-top: 2px;
+  background-image: url(images/icon/backgnd.png);
+  background-position: center center;
+  background-repeat: repeat-x;
+  color: #444;
+  font-size: smaller;
+  font-weight: bold;
+  cursor: pointer;
+  border: outset 1px #ccc; }
 
 /* Bookmark tags */
 div.impression_socbookmark {
