--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -25,6 +25,8 @@
 
 	<{$pagenav}>
 	
+	<{$article.source}>
+	
 	<{if $tagbar}>
 		<div class="impression_tags"><{include file="db:tag_bar.html"}></div>
 	<{/if}> 
