--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -27,6 +27,8 @@
 	
 	<{$article.source}>
 	
+	<{$article.socialbutton}>
+
 	<{if $tagbar}>
 		<div class="impression_tags"><{include file="db:tag_bar.html"}></div>
 	<{/if}> 
