--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -42,7 +42,7 @@ tr.impression_even td {
   vertical-align: text-bottom; }
 
 .impression_articleMain {
-  overflow: auto;
+  display: inline-block;
   padding: 2px 4px 2px 4px;
   background-color: #FFF;
   border-left: 1px solid #E8E6E2;
