--- a/modules/impression/impressionstyle.css
+++ b/modules/impression/impressionstyle.css
@@ -117,7 +117,8 @@ tr.impression_even td {
 	font-size: smaller;
 	font-weight: bold;
 	cursor: pointer;
-	border: outset 1px #CCC; }
+	border: outset 1px #CCC;
+	box-shadow:1px 1px 2px #AAAAAA; }
 
 .impression_minibutton {
 	padding: 2px 0.5em 2px 0.5em;
@@ -125,7 +126,7 @@ tr.impression_even td {
 	background-position: center center;
 	background-repeat: repeat-x;
 	color: #444;
-	font-size: .75em;
+	font-size: .8em;
 	font-weight: normal;
 	white-space: nowrap;
 	border: outset 1px #CCC;
@@ -141,8 +142,9 @@ tr.impression_even td {
 	background-repeat: repeat-x;
 	color: #000;
 	height: 1.2em;
-	font-size: .85em;
+	font-size: 9px;
 	font-weight: normal;
+	padding-top: 2px;
 	border: outset 1px #CCC;
 	vertical-align: middle; }
 
