--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -1,39 +1,43 @@
 <link rel="stylesheet" type="text/css" href="<{$icms_url}>/modules/<{$module_dir}>/impressionstyle.css" />
 
-<{if $article.showsbookmarks == 2}>
-<!-- Google Plus One script -->
-<script type="text/javascript">
-	(function() {
-		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-		po.src = 'https://apis.google.com/js/plusone.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-</script>
+<{if $article.showsbookmarks == 2  && $article.google > 0}>
+	<!-- Google Plus One script -->
+	<script type="text/javascript">
+		(function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		})();
+	</script>
+<{/if}>
 
-<!-- Facebook script -->
-<div id="fb-root"></div>
-<script>
-	(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) {return;}
-		js = d.createElement(s); js.id = id;
-		js.src = '//connect.facebook.net/en_US/all.js#xfbml=1';
-		fjs.parentNode.insertBefore(js, fjs);
-	}
-	(document, 'script', 'facebook-jssdk'));
-</script>
-<{elseif $article.showsbookmarks == 3}>
-<!-- Social Share Privacy -->
-<link rel="stylesheet" type="text/css" href="<{$icms_url}>/modules/<{$module_dir}>/socialshareprivacy.css" />
-<script type="text/javascript" src="<{$icms_url}>/modules/<{$module_dir}>/include/jquery.socialshareprivacy.js"></script>
-<script type="text/javascript"> jQuery(document).ready(function($){ if($('#socialshareprivacy').length > 0){ $('#socialshareprivacy').socialSharePrivacy(); } }); </script>
+<{if $article.showsbookmarks == 2  && $article.facebk > 0}>
+	<!-- Facebook script -->
+	<div id="fb-root"></div>
+	<script>
+		(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement(s); js.id = id;
+			js.src = '//connect.facebook.net/en_US/all.js#xfbml=1';
+			fjs.parentNode.insertBefore(js, fjs);
+		}
+		(document, 'script', 'facebook-jssdk'));
+	</script>
+<{/if}>
+
+<{if $article.showsbookmarks == 3}>
+	<!-- Social Share Privacy -->
+	<link rel="stylesheet" type="text/css" href="<{$icms_url}>/libraries/socialshareprivacy/socialshareprivacy.css" />
+	<script type="text/javascript" src="<{$icms_url}>/libraries/socialshareprivacy/jquery.socialshareprivacy.js"></script>
+	<script type="text/javascript"> jQuery(document).ready(function($){ if($('#socialshareprivacy').length > 0){ $('#socialshareprivacy').socialSharePrivacy(); } }); </script>
 <{/if}>
 
 <{$article.imageheader}>
 
 <div style="display: table; width: 100%; margin-bottom: 10px;">
 	<span class="impression_articlepath"><{$article.path}></span>
-	<span style="float: right; padding: 2px;"><{$back}></span>
+	<span style="float: right; padding: 2px;" id="button"><{$back}></span>
 </div>
 
 <div class="impression_articleTitle"><{$article.title}><{$article.icons}></div>
@@ -42,7 +46,7 @@
 	<div style="text-align: right; font-size: .75em;">
 		<{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}>
 	</div>
-	<{if $article.page == 0 }><{$article.introtext}><{/if}>
+	<{if $article.page == 0 }><{$article.introtext}><br /><{/if}>
 	<{$article.description2}>
 	<{$pagenav}>
 	<{$article.source}>
